--- a/Exercise 1.1.html
+++ b/Exercise 1.1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kweb Survey Page</title>
+    <title>KWEB Survey Page</title>
 </head>
 <body>
     <h1>KWEB Survey Page</h1>
